@@ -187,7 +187,8 @@ sub load_keymap {
 sub norm_key {
     local($_) = @_;
 
-    s/^\^/C-/;
+    s/\\(.)/$1/g;
+    s/^\^(.)/C-$1/;
     s/^(C-\[|M-)/ESC-/;
     if (/^ESC-\[/) {
 	/^ESC-\[A$/ && return "UP";
@@ -197,10 +198,9 @@ sub norm_key {
 	s/^ESC-/\^\[/;
 	return $_;
     }
-    s/^(ESC-)\^/ESC-C-/;
+    s/^ESC-\^(.)/ESC-C-$1/;
     s/^(ESC-)?C-[iI]/${1}TAB/;
     s/^(ESC-)?C-\?/${1}DEL/;
-    s/^\\//;
     return $_;
 }
 
