@@ -1,3 +1,9 @@
+2002-01-10  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>
+
+	* [w3m-dev 02810]
+	* scripts/Makefile: read -r
+	* scripts/w3mhelp.cgi.in: fix bugs displaying "C-" only in some case
+
 2002-01-08  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02794]
